examples/test/testpolicy4022.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4022
  namespace: namespace132
spec:
  podSelector:
    matchLabels:
      key10: value49
      key22: value24
      key21: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value6
          key4: value42
          key36: value16
      podSelector:
        matchLabels:
          key38: value3
          key18: value30
          key41: value6
